--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack-dev-server --config webpack/webpack.config.dev.js",
+    "dist": "webpack --config webpack/webpack.config.dist.js -p"
   },
   "repository": {
     "type": "git",
@@ -16,16 +17,22 @@
     "url": "https://github.com/Cavendichun/AwesomeApp/issues"
   },
   "homepage": "https://github.com/Cavendichun/AwesomeApp#readme",
-  "devDependencies": {
+  "dependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "react": "^16.4.0",
-    "react-dom": "^16.4.0",
+    "react-dom": "^16.4.0"
+  },
+  "devDependencies": {
+    "@material-ui/core": "^3.9.2",
+    "@material-ui/icons": "^3.0.2",
     "css-loader": "^0.28.11",
+    "electron": "^4.0.6",
     "html-webpack-plugin": "^3.2.0",
+    "material-ui": "^0.20.2",
     "node-sass": "^4.9.0",
     "open-browser-webpack-plugin": "^0.0.5",
     "sass-loader": "^7.0.3",
