--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "awesomeapp",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "electronEntry.js",
   "scripts": {
     "start": "webpack-dev-server --config webpack/webpack.config.dev.js",
-    "dist": "webpack --config webpack/webpack.config.dist.js -p"
+    "app": "electron electronEntry.js",
+    "dist": "rm -rf ./preBuild/dist && webpack --config webpack/webpack.config.dist.js -p",
+    "dist-first": "webpack --config webpack/webpack.config.dist.js -p",
+    "build": "cd ./preBuild && npm run create"
   },
   "repository": {
     "type": "git",
@@ -18,6 +21,7 @@
   },
   "homepage": "https://github.com/Cavendichun/AwesomeApp#readme",
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-preset-es2015": "^6.24.1",
@@ -31,12 +35,15 @@
     "@material-ui/icons": "^3.0.2",
     "css-loader": "^0.28.11",
     "electron": "^4.0.6",
+    "electron-builder": "^20.38.5",
+    "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "material-ui": "^0.20.2",
     "node-sass": "^4.9.0",
     "open-browser-webpack-plugin": "^0.0.5",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
+    "url-loader": "^1.1.2",
     "webpack": "^4.11.1",
     "webpack-cli": "^3.0.3",
     "webpack-dev-server": "^3.1.4"
