--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "webpack-dev-server --config webpack/webpack.config.dev.js",
     "app": "electron electronEntry.js",
-    "dist": "webpack --config webpack/webpack.config.dist.js -p",
-    "build": "cd ./preBuild && npm run create"
+    "pre-build": "cd preBuild && rimraf node_modules && npm install",
+    "packager": "rimraf prebuild/dist && webpack --config webpack/webpack.config.dist.js -p && cd preBuild && npm run packager"
   },
   "repository": {
     "type": "git",
@@ -34,12 +34,12 @@
     "@material-ui/icons": "^3.0.2",
     "css-loader": "^0.28.11",
     "electron": "^4.0.6",
-    "electron-builder": "^20.38.5",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "material-ui": "^0.20.2",
     "node-sass": "^4.9.0",
     "open-browser-webpack-plugin": "^0.0.5",
+    "rimraf": "^2.6.3",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
     "url-loader": "^1.1.2",
