--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "md5": "^2.2.1",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
-    "react-number-format": "^4.0.7"
+    "react-number-format": "^4.0.7",
+    "react-router": "^3.0.0",
+    "react-router-dom": "^5.0.0"
   },
   "devDependencies": {
     "@material-ui/core": "^3.9.2",
